Project RPG {
  database_type: 'PostgreSQL'
  Note: '''
    # RPG Database
    > Aqui se encontra o a documentação do projeto RPG

    Esse projeto foi desenvolvido para a matéria de Banco de Dados afim de desenvolver melhor
    as técnicas ensinadas durante as aulas do professor Clodis Boscariolli.
  '''
}

TableGroup user_zone {
  User
  Character
}

TableGroup character_zone {
  Attribute
  Race 
  Class
  Craft
  Inventory
  Guild
  Item
}

TableGroup battle_zone {
  Environment
  Enemy
  Boss
  Siege
  Modifier
}

TableGroup relations {
  Inventory_Item
  Skill_Class
  Skill_Race
  Skill_Enemy
  Craft_Item
  Environment_Battle
  Boss_Item
  Character_Battle
  Enemy_Battle
}

Table "User" {
  "id" uuid [pk]
  "name" text [not null]
  "email" text [not null, unique]
  "Password" text [not null, note: "Essa senha é salva encriptada de forma a garantir maior segurança"]
  created_at timestamp [default: `now()`]
  "updated_at" timestamp
  note: '''
    # <h1 align="center">Usuário</h1>
    > Essa tabela define o conjunto de dados necessários para compor uma espécie de conta

    ## Detalhes
    - Um usuário pode no máximo ter 3 personagens.
  '''
}

Table "Character" {
  "id" uuid [pk]
  "name" varchar(26) [not null, unique]
  "genre" text [not null]
  created_at timestamp [default: `now()`]
  
  "level" integer [not null, note: "Armazena o level atual do personagem"]
  "exp" integer [not null, note: "Armazena a quantidade de experiência atual do personagem"]
  "hp" integer [not null, note: "Guarda o HP (pontos de vida) máximo desse personagem"]
  "mana" integer [not null, note: "Representa a quantidade de energia máxima que esse personagem tem"]
  "score" bigint [not null, note: "Representa a quantidade de pontos que esse personagem arrecadou"]
  
  user uuid [ref: > User.id, note: "Um usuário pode ter no máximo 3 personagens"]
  attribute uuid [ref: - Attribute.id]
  race uuid [ref: - Race.id]
  class uuid [ref: - Class.id]
  craft uuid [ref: - Craft.id, note: "Relação de profissão do personagem"]
  guild uuid [ref: - Guild.id]
  inventory uuid [ref: - Inventory.id]

  note: '''
    # <h1 align="center">Personagem</h1>
    > Essa tabela guarda as informações de um personagem, bem como suas relações com suas diversas tabelas
  '''
}

Table "Attribute" {
  "id" uuid [pk]
  "wisdom" integer [not null, default: 0, note: "Armazena a quantidade de sabedoria pura do personagem"]
  "charisma" integer [not null, default: 0, note: "Armazena a carisma de sabedoria pura do personagem"]
  "constitution" integer [not null, default: 0, note: "Armazena a constituição de sabedoria pura do personagem"]
  "dexterity" integer [not null, default: 0, note: "Armazena a destreza de sabedoria pura do personagem"]
  "strength" integer [not null, default: 0, note: "Armazena a força de sabedoria pura do personagem"]
  "intelligence" integer [not null, default: 0, note: "Armazena a inteligência de sabedoria pura do personagem"]

  note: '''
    # <h1 align="center">Atributos</h1>
    > Essa tabela guarda as informações clássicas de uma ficha de RPG, sendo os pontos que caracterizam um personagem
  '''
}

Table "Race" {
  "id" uuid [pk]
  "name" text [unique, not null]
  "region" text [not null, note: "Região de origem da raça"]
  "lore" text [not null, note: "Backstory da raça"]

  modifier uuid [ref: - Modifier.id, note: "Modificação de atributos que essa tabela altera no personagem"]

  note: '''
    # <h1 align="center">Raça</h1>
    > Essa tabela representa as raças do universo desse RPG
  '''
}

Table "Class" {
  "id" uuid [pk]
  "name" text [unique, not null]

  modifier uuid [ref: - Modifier.id, note: "Modificação de atributos que essa tabela altera no personagem"]

  note: '''
    # <h1 align="center">Classe</h1>
    > Essa tabela representa as classes do universo desse RPG
  '''
}

Table "Craft" {
  "id" uuid [pk]
  "name" text [unique, not null]
  
  modifier uuid [ref: - Modifier.id, note: "Modificação de atributos que essa tabela altera no personagem"]

  note: '''
    # <h1 align="center">Profissões</h1>
    > Essa tabela representa as profissões do universo desse RPG
  '''
}

Table "Craft_Item" {
  item uuid [pk, ref: - Item.id]
  craft uuid [pk, ref: - Craft.id]
  amount integer [not null, note: "Quantidade desse terminado item que essa profissão recebe"]
}

Table "Guild" {
  "id" uuid [pk]
  "name" text [unique, not null]

  note: '''
    # <h1 align="center">Guilda</h1>
    > Essa tabela representa grupos/alianças que os personagens podem fazer para se ajudarem em eventos especiais
  '''
}

Table "Inventory" {
  "id" integer [pk]

  note: '''
    # <h1 align="center">Inventário</h1>
    > Essa tabela representa o sistema de armazenamento de itens do personagem
  '''
}

Table Inventory_Item {
  inventory uuid [pk, ref: - Inventory.id]
  item uuid [pk, ref: - Item.id]
  amount integer [not null, note: "Quantidade desse terminado item no inventário"]
}

Table "Item" {
  "id" uuid [pk]
  "name" text [unique, not null]
  "description" text [not null]
  
  modifier uuid [ref: - Modifier.id, note: "Modificação de atributos que essa tabela altera no personagem"]

  note: '''
    # <h1 align="center">Item</h1>
    > Essa tabela representa um item, um artefato que propões alterações de atributos para os personagens
  '''
}

Table "Skill" {
  "id" uuid [pk]
  "name" text [unique, not null]
  "description" text [not null, note: "A descrição de utilização e efeitos da habilidade"]
  "cost" integer [not null, note: "Determina o custo de utilização de determinada habilidade"]
  "effect" text [not null, note: "Um balança de consequências do uso da habilidade"]

  note: '''
    # <h1 align="center">Habilidade</h1>
    > Habilidades que podem ser conjuradas por um personagem ou inimigo
  '''
}

Table Skill_Class {
  class uuid [pk, ref: - Class.id]
  skill uuid [pk, ref: - Skill.id]
}

Table Skill_Race {
  race uuid [pk, ref: - Race.id]
  skill uuid [pk, ref: - Skill.id]
}

Table Skill_Enemy {
  skill uuid [pk, ref: - Skill.id]
  enemy uuid [pk, ref: - Enemy.id]
}

Table "Enemy" {
  "id" uuid [pk]
  "name" text [unique, not null]
  "hp" integer [not null, note: "Guarda o HP (pontos de vida) máximo desse inimigo"]

  attribute uuid [ref: - Attribute.id]

  note: '''
    # <h1 align="center">Inimigo</h1>
    > Essa tabela descreve um inimigo e seus atributos
  '''
}

Table "Environment" {
  "id" uuid [pk]
  "name" text [unique, not null]
  "region" text [not null, note: "Região onde se encontra esse ambiente"]
  
  modifier uuid [ref: - Modifier.id, note: "Modificação de atributos que essa tabela altera nos personagens e inimigos"]

  note: '''
    # <h1 align="center">Ambiente</h1>
    > Essa tabela resulta em uma região de batalha que confere buffs/debuffs aos atributos de personagens e inimigos
  '''
}

Table Environment_Battle {
  environment uuid [pk, ref: - Environment.id]
  battle uuid [pk, ref: - Battle.id]
}

Table "Battle" {
  "id" uuid [pk]
  "end_date" timestamp
  "begin_date" timestamp

  note: '''
    # <h1 align="center">Batalha</h1>
    > Essa tabela guarda eventos de batalhas do RPG
  '''
}

Table Character_Battle {
  character uuid [pk, ref: - Character.id]
  battle uuid [pk, ref: - Battle.id]
}

Table Enemy_Battle {
  enemy uuid [pk, ref: - Enemy.id]
  battle uuid [pk, ref: - Battle.id]
}

Table "Turn" {
  "id" uuid [pk]
  character_hp_diff integer [default: 0, note: "Dedução ou soma na vida do personagem a ser aplicada nesse turno"]
  enemy_hp_diff integer [default: 0, note: "Dedução ou soma na vida do inimigo a ser aplicada nesse turno"]

  character_mana_diff integer [default: 0, note: "Dedução ou soma na mana do personagem a ser aplicada nesse turno"]
  
  character uuid [ref: - Character.id]
  enemy uuid [ref: - Enemy.id]
  skill uuid [ref: - Skill.id]
  battle uuid [ref: - Battle.id]

  note: '''
    # <h1 align="center">Turno</h1>
    > Essa tabela guarda todos os turnos de uma determinada batalha, sendo um log de danos e curas realizadas
  '''
}

Table "Modifier" {
  "id" uuid [pk]
  "wisdom" integer [not null, default: 0, note: "Armazena a quantidade de sabedoria que será deduzida/somada do personagem"]
  "charisma" integer [not null, default: 0, note: "Armazena a carisma de sabedoria que será deduzida/somada do personagem"]
  "constitution" integer [not null, default: 0, note: "Armazena a constituição de sabedoria que será deduzida/somada do personagem"]
  "dexterity" integer [not null, default: 0, note: "Armazena a destreza de sabedoria que será deduzida/somada do personagem"]
  "strength" integer [not null, default: 0, note: "Armazena a força de sabedoria que será deduzida/somada do personagem"]
  "intelligence" integer [not null, default: 0, note: "Armazena a inteligência de sabedoria que será deduzida/somada do personagem"]

  note: '''
    # <h1 align="center">Modificadores</h1>
    > Essa tabela guarda modificações que serão aplicadas nos atributos puro/base do personagem durante uma determinada batalha
  '''
}

Table "Boss" {
  "id" uuid [pk, ref: - Enemy.id]
  
  modifier uuid [ref: - Modifier.id, note: "Modificação de atributos que essa tabela altera no personagem"]

  note: '''
    # <h1 align="center">Chefe de batalha</h1>
    > Essa tabela representa um chefe de uma determinada batalha, um inimigo final mais poderoso
  '''
}

Table Boss_Item {
  item uuid [pk, ref: - Item.id]
  boss uuid [pk, ref: - Boss.id]
  amount integer [not null]
}

Table "Siege" {
  "id" uuid [pk, ref: - Battle.id]
  name text [unique, not null]
  boss uuid [ref: - Boss.id] 
  guild uuid [ref: - Guild.id]

  note: '''
    # <h1 align="center">Cerco</h1>
    > Essa tabela representa uma batalha realizada em equipe com uma guilda
  '''
}
